gateway-api/gateway.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: shared-gw
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: shared-gw
  namespace: shared-gw
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  gatewayClassName: cilium
  listeners:
  - name: http
    protocol: HTTP
    port: 80
    allowedRoutes:
      namespaces:
        from: All
  - name: https
    protocol: HTTPS
    port: 443
    hostname: "*.example.com"
    tls:
      certificateRefs:
      - kind: Secret
        name: wildcard-tls-cert
    allowedRoutes:
      namespaces:
        from: All
  - name: tls
    protocol: TLS
    port: 443
    hostname: "tls.example.com"
    tls:
      mode: Passthrough
    allowedRoutes:
      namespaces:
        from: All
