gateway-api/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: webapp-http-route
  namespace: webapp
spec:
  parentRefs:
  - name: shared-gw
    sectionName: http
    namespace: shared-gw
  hostnames:
  - webapp.example.com
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: webapp-v1-svc
      port: 80
