gateway-api/tls-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TLSRoute
metadata:
  name: nginx-tls-route
  namespace: nginx-tls
spec:
  parentRefs:
  - name: gateway-api
    namespace: infra
    sectionName: tls
  hostnames:
  - tls.example.com
  rules:
  - backendRefs:
    - name: nginx-tls-svc
      port: 443
